# de0_hps_example

./: .gitignore  DE0_HSP_Example.qpf  DE0_HSP_Example.qsys  Makefile  README.md
soc/: DE0_HPS_Example.cdf  DE0_HPS_Example.qpf  DE0_HPS_Example.qsf  DE0_HPS_Example.qsys  DE0_HPS_Example_top.v  DE0_HSP_Example.cdf  DE0_HSP_Example.qsf  DE0_HSP_Example.qsys  DE0_HSP_Example_top.v  Makefile  README.md  board_info.xml
soc/dts/: DE0_HPS_Example.dts  DE0_HPS_Example_board_info.xml  DE0_HPS_Example_system_info.xml  DE0_HSP_Example.dts  DE0_HSP_Example_board_info.xml  DE0_HSP_Example_system_info.xml  socfpga.dtsi  socfpga_cyclone5.dtsi
sw/01_bare_metal_example/: Makefile  README.md  bare_metal_example.c
sw/01_bare_metal_example/preloader/: settings.bsp
sw/02_bare_metal_uboot/: CMakeLists.txt  Makefile  README.md  bare_metal_example.c  boot.scr  boot.txt  fdisk.sh  toolchain-arm-altera-eabi.cmake
sw/02_bare_metal_uboot/preloader/: settings.bsp
sw/openocd/: README.md  altera_fpgasoc.cfg  altera_sockit.cfg  gdb.cmd
